--- a/styles/base.css
+++ b/styles/base.css
@@ -204,64 +204,6 @@ canvas {
     justify-content: center;
 }
 
-/*Logo*/
-:root {
-    --logo-size: 200px; /* Default size of the logo container */
-}
-
-.logo-container {
-    margin: calc(var(--logo-size) * 0.15);
-    position: relative;
-    width: var(--logo-size);
-    height: var(--logo-size);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #333; /* Background color for visibility */
-    border: calc(var(--logo-size) * 0.05) solid #50C878;
-}
-
-.square, .inner-square, .innermost-square {
-    position: absolute;
-    border: calc(var(--logo-size) * 0.05) solid #00aaff; /* Light blue */
-    transform: rotate(45deg);
-}
-
-.square {
-    width: 100%;
-    height: 100%;
-}
-
-.inner-square {
-    width: 80%;
-    height: 80%;
-}
-
-.innermost-square {
-    width: 60%;
-    height: 60%;
-}
-
-.top-square {
-    width: 70%; /* Adjust size as needed */
-    height: 70%;
-    border: calc(var(--logo-size) * 0.05) solid #50C878; /* Emerald green, matching the container */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); /* Center the square */
-}
-
-.logo-text {
-    position: absolute;
-    color: #fff;
-    font-size: calc(var(--logo-size) * 0.4); /* Adjusted for readability */
-    transform: rotate(-45deg);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-45deg); /* Properly center and orient text */
-}
-
 .hidden-file-input {
     display: none;
 }
@@ -365,4 +307,13 @@ canvas {
   th, td {
     page-break-inside: avoid;
   }
+}
+
+.logo-container {
+    width: var(--base-font-size);
+    height: var(--base-font-size);
+    display: inline-block;
+    vertical-align: baseline;
+    margin: 0 -0.02em 0 0;
+    position: relative;
 }
