--- a/styles/base.css
+++ b/styles/base.css
@@ -216,7 +216,7 @@ canvas {
     width: 50px;
     height: 50px;
     border: 5px solid rgba(0, 0, 0, 0.1);
-    border-top: 5px solid #3498db;
+    border-top: 5px solid #00aaff;
     border-radius: 50%;
     animation: spin 1s linear infinite;
 }
